--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ body {
 }
 
 /* link */
-a {
+a:link, a:visited {
 	text-decoration: none;
+	color: #0e65e5;
 }
 
 /* address */
@@ -47,11 +48,20 @@ ul {
 #header {
 	position: fixed;
 	width: 100%;
-	height: 4em;
+	height: 3em;
 	top: 0;
 	background: #FFFFFF;
 	box-shadow: 0 3px 3px #888888;
 	z-index: 2;
+}
+
+#header img {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0.5em;
+	height: 90%;
+	margin: auto;
 }
 
 /* information on webpage */
@@ -80,27 +90,30 @@ ul {
 #info_title {
 	text-align: center;
 	font-size: 2em;
-	color: #3e70c1;
+	color: #0e65e5;
 }
 
 /* oval that holds links to other pages */
-#link_oval {
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
+#link_container {
+	float: right;
 	text-align: center;
-	background: #3e70c1;
-	width: 20em;
-	height: 2em;
-	border-radius: 1.5em;
-	margin-top: 2.9em;
+	line-height: 3em;
+	background: #0e65e5;
+	width: 25em;
+	height: 3em;
+	clip-path: polygon(0 3em, 2em 0, 100% 0, 100% 100%)
 }
 
 /* links to other pages */
-#link_oval a {
+#link_container a {
 	display: inline-block;
+	vertical-align: middle;
 	color: white;
-	margin: 0.4em 1em 0 1em;
+	margin: 0 1em;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 /* website logo */
@@ -115,7 +128,8 @@ ul {
 	position: relative;
 	height: auto;
 	margin: 7em auto 2em auto;
-	width: 80%;
+	width: 90%;
+	max-width: 90em;
 	z-index: 0;
 }
 
@@ -151,3 +165,5 @@ header with right float */
 	margin-right: 0.5em;
 	margin-top: 0.5em;
 }
+
+/* previously used color 3e70c1 */
