--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -15,9 +15,9 @@ body {
 }
 
 /* link */
-a {
-	font-size: 20px;
+a:link, a:visited {
 	text-decoration: none;
+	color: #0e65e5;
 }
 
 /* address */
@@ -72,7 +72,7 @@ ul {
 #info_title {
 	text-align: center;
 	font-size: 2em;
-	color: #3e70c1;
+	color: #0e65e5;
 }
 
 /* website logo */
@@ -102,8 +102,8 @@ ul {
 	width: 100%;
 	text-align: center;
 	height: 3em;
-	background: #3e70c1;
-	box-shadow: 0 -2px 2px #888888;
+	background: #FFFFFF;
+	box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.25);
 	z-index: 3;
 }
 
@@ -128,3 +128,5 @@ ul {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+/* previously used color 3e70c1 */
