--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ ul {
 	height: 3em;
 	top: 0;
 	background: #FFFFFF;
-	box-shadow: 0 3px 3px #888888;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
 	z-index: 2;
 }
 
