--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ ul {
 	margin-bottom: 2em;
 	padding: 4em 8em 4em 8em;
 	border-radius: 1em;
-	box-shadow: 3px 3px 3px #888888;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 	background: #FFFFFF;
 	line-height: 2;
 }
@@ -81,7 +81,7 @@ ul {
 	margin-bottom: 2em;
 	padding: 2em 4em 2em 4em;
 	border-radius: 1em;
-	box-shadow: 3px 3px 3px #888888;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 	background: #FFFFFF;
 	line-height: 2;
 }
