--- a/styles.css
+++ b/styles.css
@@ -95,32 +95,29 @@ ul {
 
 /* oval that holds links to other pages */
 #link_container {
+	display: inline-block;
 	float: right;
 	text-align: center;
 	line-height: 3em;
 	background: #0e65e5;
-	width: 25em;
+	width: 20em;
 	height: 3em;
-	clip-path: polygon(0 3em, 2em 0, 100% 0, 100% 100%)
+	clip-path: polygon(0 3em, 2em 0, 100% 0, 100% 100%);
 }
 
 /* links to other pages */
-#link_container a {
-	display: inline-block;
-	vertical-align: middle;
-	color: white;
+#link_container img {
+	position: relative;
+	height: 2.5em;
 	margin: 0 1em;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+	vertical-align: middle;
 }
 
 /* website logo */
 #logo {
 	float: left;
 	height: 3em;
-	margin: 0.5em 0 0 0.5em;
+	margin: 0.5em 0;
 }
 
 /* main body of webpage below header */
