--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -98,27 +98,22 @@ ul {
 /* navigation bar that holds links to other pages */
 #nav_bar {
 	position: fixed;
+	display: inline-block;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
+	line-height: 3em;
 	height: 3em;
 	background: #FFFFFF;
 	box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.25);
 	z-index: 3;
 }
 
-/* links to other pages */
-#nav_bar a {
-	display: inline-block;
-	color: white;
-	margin: 0 0.5em 0 0.5em;
-	text-decoration: none;
-}
-
 /* navigation bar icons */
 #nav_bar img {
+	vertical-align: middle;
 	height: 2.5em;
-	margin: 0.25em 1em 0 1em;
+	margin: 0 2em;
 }
 
 /* image of author */
