--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -7,7 +7,6 @@
 
 /* body of webpage */
 body {
-	display: table;
 	height: 100%;
 	width: 100%;
 	background: #DFDFDF;
@@ -62,10 +61,18 @@ ul {
 #info_block {
 	height: auto;
 	margin-bottom: 1em;
-	padding: 1em;
+	padding: 3em 1.5em;
 	background: #FFFFFF;
 	border-radius: 1em;
-	line-height: 1.5;
+	line-height: 1.7;
+}
+
+#info_block div {
+	text-align: center;
+}
+
+#info_block img {
+	width: 100%;
 }
 
 /* information title */
@@ -73,6 +80,28 @@ ul {
 	text-align: center;
 	font-size: 2em;
 	color: #0e65e5;
+}
+
+/* oval that holds links to other pages */
+#link_container {
+	position: fixed;
+	display: inline-block;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	line-height: 3em;
+	height: 3em;
+	background: #FFFFFF;
+	box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.25);
+	z-index: 3;
+}
+
+/* links to other pages */
+#link_container img {
+	position: relative;
+	height: 2.5em;
+	margin: 0 2em;
+	vertical-align: middle;
 }
 
 /* website logo */
@@ -89,39 +118,16 @@ ul {
 /* main body of webpage below header */
 #middle {
 	position: relative;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 2.2em auto;
 	height: auto;
 	z-index: 0;
-}
-
-/* navigation bar that holds links to other pages */
-#nav_bar {
-	position: fixed;
-	display: inline-block;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	line-height: 3em;
-	height: 3em;
-	background: #FFFFFF;
-	box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.25);
-	z-index: 3;
-}
-
-/* navigation bar icons */
-#nav_bar img {
-	vertical-align: middle;
-	height: 2.5em;
-	margin: 0 2em;
 }
 
 /* image of author */
 #profile_image {
 	display: block;
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
+	width: 60% !important;
 }
 
 /* previously used color 3e70c1 */
