--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -58,7 +58,7 @@ ul {
 }
 
 /* information on webpage */
-#info_block {
+#info_block, #info_block_proj {
 	height: auto;
 	margin-bottom: 1em;
 	padding: 3em 1.5em;
@@ -67,11 +67,11 @@ ul {
 	line-height: 1.7;
 }
 
-#info_block div {
+#info_block div, #info_block_proj div {
 	text-align: center;
 }
 
-#info_block img {
+#info_block img, #info_block_proj img {
 	width: 100%;
 }
 
@@ -116,7 +116,7 @@ ul {
 }
 
 /* main body of webpage below header */
-#middle {
+#middle, #middle_proj {
 	position: relative;
 	margin: 2.2em auto;
 	height: auto;
