--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	margin: 0;
 	border: 0;
+	box-sizing: border-box;
 }
 
 /* body of webpage */
@@ -25,15 +26,6 @@ address {
 	text-align: center;
 }
 
-/* button */
-input {
-	border-radius: 2em;
-	background: #DFDFDF;
-	box-shadow: 3px 3px 3px #888888;
-	padding: 0.3em 0.5em;
-	font-size: 20px;
-}
-
 /* text */
 p {
 	text-align: justify;
@@ -44,6 +36,23 @@ ul {
 	padding-left: 1em;
 }
 
+/* button */
+.button {
+	border-radius: 2em;
+	background: #DFDFDF;
+	padding: 0.3em 0.5em;
+	font-size: 20px;
+}
+
+/* hovered button */
+.buttonSelected {
+	border-radius: 2em;
+	background: #DFDFDF;
+	box-shadow: 0 3px 3px #888888;
+	padding: 0.3em 0.5em;
+	font-size: 20px;
+}
+
 /* webpage header */
 #header {
 	position: fixed;
@@ -51,7 +60,6 @@ ul {
 	height: 3em;
 	top: 0;
 	background: #FFFFFF;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
 	z-index: 2;
 }
 
@@ -76,30 +84,28 @@ ul {
 }
 
 /* info block button alignment */
-#info_block div, #info_block_proj div {
+#info_block div, .info_block_proj div {
 	text-align: center;
 }
 
 /* info block image width */
-#info_block img, #info_block_proj img {
+#info_block img, .info_block_proj img {
 	width: 100%;
 }
 
 /* project information */
-#info_block_proj {
-	display: inline-block;
+.info_block_proj {
+	float: left;
 	padding: 3em;
 	margin: 0 0 2em;
 	background: #FFFFFF;
 	border-radius: 1em;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-	width: 100%;
 	line-height: 2;
-	box-sizing:  border-box;
 }
 
 /* information title */
-#info_title {
+.info_title {
 	text-align: center;
 	font-size: 2em;
 	color: #0e65e5;
@@ -134,18 +140,12 @@ ul {
 
 /* main body of webpage below header */
 #middle, #middle_proj {
-	position: relative;
-	height: auto;
 	margin: 5em auto 2em auto;
 	width: 80%;
 	max-width: 80em;
-	z-index: 0;
 }
 
-/* main body of projects webpage below header */
 #middle_proj {
 	column-count: 2;
 	column-gap: 2em;
 }
-
-/* previously used color 3e70c1 */
