--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,9 @@ ul {
 	border-radius: 1em;
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 	line-height: 2;
+	-webkit-column-break-inside: avoid;
+	page-break-inside: avoid;
+    break-inside: avoid;
 }
 
 /* information title */
