--- a/css/styles.css
+++ b/css/styles.css
@@ -1,158 +1,165 @@
-/* reset browser defaults */
 * {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
-/* body of webpage */
+a, a:visited, a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
 body {
-	height: 100%;
-	width: 100%;
-	background: #EAEAEA;
-	font-family: "Raleway", "Segoe UI", "Sans-Serif";
-	font-size: 18px;
+    width: 100%;
+    height: 100%;
+    font-family: Montserrat, Arial, serif;
+    font-size: 18px;
+    text-align: center;
 }
 
-/* link */
-a:link, a:visited {
-	text-decoration: none;
-	color: #0e65e5;
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    overflow: hidden;
 }
 
-/* address */
-address {
-	text-align: center;
+.header {
+    position: relative;
+    z-index: 2;
+    max-width: 100%;
+    min-width: 60em;
+    top: 3em;
+    height: 3em;
+    background: #000000;
+    overflow: hidden;
 }
 
-/* text */
-p {
-	text-align: justify;
+.header_sticky {
+    position: sticky;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+    top: 0;
+    width: 100%;
 }
 
-/* unordered list */
-ul {
-	padding-left: 1em;
+.image_container {
+    flex: 25%;
+    float: left;
+    padding: 0.25em;
 }
 
-/* button */
-.button {
-	border-radius: 2em;
-	background: #EAEAEA;
-	padding: 0.3em 0.5em;
-	font-size: 20px;
+.project_div {
+    flex: 50%;
+    font-size: 28px;
+    height: 15em;
+    padding: 0;
+    border: 2px solid black;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 }
 
-/* hovered button */
-.buttonSelected {
-	border-radius: 2em;
-	box-shadow: 0 3px 3px #888888;
-	padding: 0.3em 0.5em;
-	font-size: 20px;
+.project_div img {
+    float: bottom;
+    margin-top: 0.5em;
+    width: 100%;
 }
 
-/* contact info on resume page */
-#contact p {
-	text-align: center;
-}
-
-/* webpage header */
-#header {
-	position: fixed;
-	width: 100%;
-	height: 3em;
-	top: 0;
-	background: #FFFFFF;
-	z-index: 2;
-}
-
-/* website logo */
-#header img {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0.5em;
-	height: 90%;
-	margin: auto;
-}
-
-/* information on webpage */
-#info_block {
-	margin-bottom: 2em;
-	padding: 4em 8em 4em 8em;
-	border-radius: 1em;
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-	background: #FFFFFF;
-	line-height: 2;
-}
-
-/* info block button alignment */
-#info_block div, .info_block_proj div {
-	text-align: center;
-}
-
-/* info block image width */
-#info_block img, .info_block_proj img {
-	width: 100%;
-}
-
-/* project information */
-.info_block_proj {
-	float: left;
-	padding: 3em;
-	margin: 0 0 2em;
-	background: #FFFFFF;
-	border-radius: 1em;
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-	line-height: 2;
-	-webkit-column-break-inside: avoid;
-	page-break-inside: avoid;
-    break-inside: avoid;
+.row {
+    display: flex;
+    width: 60em;
+    margin: auto;
+    padding-top: 1em;
 }
 
 /* information title */
-.info_title {
-	text-align: center;
-	font-size: 2em;
-	color: #0e65e5;
+.section_title {
+    text-align: center;
+    padding-top: 1.5em;
+    font-size: 2em;
+    color: #555555;
 }
 
-/* oval that holds links to other pages */
+.surround_text {
+    width: 80%;
+    border-radius: 0 0 1em 1em;
+    border: 2px solid black;
+    margin: auto;
+    padding: 0.2em;
+    background: white;
+}
+
+.content_div {
+    flex: 33.33%;
+    float: left;
+    padding: 2em;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+}
+
+.content_div p {
+    font-size: 24px;
+    text-align: center;
+}
+
+.content_div img {
+    float: top;
+    height: 3em;
+}
+
+#canvas_container {
+    width: 100%;
+    height: 5em;
+    background: #666;
+}
+
+#footer {
+    padding: 2em;
+    line-height: 1.5;
+    background: #CCC;
+}
+
 #link_container {
-	display: inline-block;
-	float: right;
-	text-align: center;
-	line-height: 3em;
-	background: #0e65e5;
-	width: 20em;
-	height: 3em;
-	clip-path: polygon(0 3em, 2em 0, 100% 0, 100% 100%);
+    display: flex;
+    width: 40em;
+    height: 100%;
+    margin: auto;
 }
 
-/* links to other pages */
 #link_container img {
-	position: relative;
-	height: 2.5em;
-	margin: 0 1em;
-	vertical-align: middle;
+    height: 2.5em;
 }
 
-/* website logo */
-#logo {
-	float: left;
-	height: 3em;
-	margin: 0.5em 0;
+#main_body {
+    position: relative;
+    z-index: 1;
+    max-width: 100%;
+    min-width: 60em;
+    margin: 1em auto auto auto;
+    height: auto;
+    background: #FFFFFF;
+    padding-bottom: 2em;
 }
 
-/* main body of webpage below header */
-#middle {
-	margin: 5em auto 2em auto;
-	width: 80%;
-	max-width: 80em;
+#projects {
+    margin: auto;
+    padding-top: 5em;
+    max-width: 45em;
 }
 
-#middle_proj {
-	margin: 5em auto 2em auto;
-	width: 45em;
+#title {
+    position: relative;
+    top: 0;
+    margin-top: 1.2em;
+    color: #FFFFFF;
+    font-size: 3em;
+    z-index: 1;
 }
