--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ canvas {
     min-width: 60em;
     top: 3em;
     height: 3em;
-    background: #000000;
+    background: #00596b;
     overflow: hidden;
 }
 
