--- a/css/styles_mobile.css
+++ b/css/styles_mobile.css
@@ -21,7 +21,7 @@ body {
 }
 
 /* hide elements not needed for mobile version of website */
-canvas, #canvas_container, #footer {
+canvas, #canvas_container, #footer, #title {
     display: none;
 }
 
@@ -46,14 +46,14 @@ canvas, #canvas_container, #footer {
     height: 3em;
 }
 
-/* website header */
+/* website header (acts like footer on mobile)*/
 .header {
     position: fixed;
     z-index: 2;
     width: 100%;
     bottom: 0;
     height: 3em;
-    background: #000000;
+    background: #00596b;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -100,6 +100,20 @@ canvas, #canvas_container, #footer {
     color: #555555;
 }
 
+/* new 'header' for mobile website */
+#canvas_container {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    width: 100%;
+    height: 3em;
+    background: white;
+    border-bottom: 1px solid grey;
+}
+
 /* contains all header links */
 #link_container {
     display: flex;
@@ -118,8 +132,7 @@ canvas, #canvas_container, #footer {
     padding-bottom: 3em;
 }
 
-/* title of website */
-#title {
-    color: black;
-    font-size: 8vw;
+/* logo for mobile site */
+#mobile_logo {
+    height: 2.5em;
 }
