--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ canvas {
 /* defines div rows used on all pages */
 .row {
     display: flex;
-    max-width: 70%;
+    max-width: 65em;
     min-width: 50em;
     margin: auto;
     padding-top: 1em;
