--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ body {
     width: 70%;
     border-radius: 0 0 1em 1em;
     border: 2px solid black;
-    margin: auto;
+    margin: -2px auto auto auto;
     padding: 0.2em;
     background: white;
 }
