--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ p {
         margin-top: 2.4em;
         top: 0;
         z-index: 2;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
         background: var(--header-color);
     }
 
