--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 
 /* configure links */
 a, a:visited, a:hover {
-    color: black;
+    color: #555;
     text-decoration: none;
 }
 
@@ -74,9 +74,9 @@ p {
 .project_text {
     width: 70%;
     border-radius: 0 0 1em 1em;
-    border-bottom: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-bottom: 2px solid #555;
+    border-left: 2px solid #555;
+    border-right: 2px solid #555;
     margin: auto;
     padding: 0.2em;
     background: white;
@@ -87,7 +87,7 @@ p {
     text-align: center;
     padding-top: 1.5em;
     font-size: 2em;
-    color: #555555;
+    color: #555;
 }
 
 /* styling for desktop website */
@@ -123,7 +123,7 @@ p {
         top: 0;
         z-index: 2;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-        background: var(--header-color);
+        background: linear-gradient(to right, #0055ff, #00d8ff);
     }
 
     /* container that holds project information */
@@ -133,7 +133,7 @@ p {
         font-size: 28px;
         height: 15em;
         padding: 0;
-        border: 2px solid black;
+        border: 2px solid #555;
         line-height: 1.5;
         border-radius: 1em;
         margin: 0.5em;
@@ -165,7 +165,7 @@ p {
     #footer {
         padding: 2em;
         line-height: 1.5;
-        background: #CCC;
+        background: #EEE;
     }
 
     /* contains all header links */
@@ -200,6 +200,7 @@ p {
         margin-top: 1.2em;
         color: #FFFFFF;
         font-size: 3em;
+        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
         z-index: 1;
     }
 }
@@ -228,7 +229,7 @@ p {
         width: 100%;
         bottom: 0;
         height: 3em;
-        background: var(--header-color);
+        background: linear-gradient(to right, #0055ff, #00d8ff);
         box-shadow: var(--drop-shadow);
     }
 
