--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --font-stack: Montserrat, Arial, serif; /* font stack */
     --prim-color: #0055ff; /* primary color */
     --scnd-color: #00d8ff; /* secondary color */
+    --body-gradient: linear-gradient(var(--prim-color), #EEE);
     --header-gradient: linear-gradient(to right, var(--prim-color), var(--scnd-color)); /* header gradient */
     --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); /* drop shadow */
 }
@@ -25,7 +26,7 @@ body {
     font-family: var(--font-stack);
     font-size: 18px;
     text-align: center;
-    background-color: var(--prim-color);
+    background-color: var(--body-gradient);
 }
 
 /* makes all images non-draggable */
@@ -157,6 +158,7 @@ p {
 
     /* container that contains conway canvas */
     #canvas_container {
+        z-index: -1;
         width: 100%;
         height: 5em;
     }
