--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,115 +1,115 @@
-/* styling for desktop website */
+/*
+Paul Scott
+3 February 2019
+
+desktop styles
+ */
+
 @media (min-width: 720px) {
 
-    /* canvas that contains conway's game of life */
-    canvas {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 0;
-        overflow: hidden;
-    }
+  /* hides logo that's meant only for mobile */
+  #mobile_logo { display: none }
 
-    /* div that holds about page information */
-    .content_div {
-        flex: 33.33%;
-        float: left;
-        padding: 1.5em;
-        line-height: 1.5;
-        border-radius: 1em;
-        margin: 0.5em;
-        box-shadow: var(--drop-shadow);
-    }
+  /* div that holds about page information */
+  .data_div {
+    flex: 33.33%;
+    float: left;
+    padding: 1.5em;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: var(--drop-shadow);
+  }
 
-    /* website header */
-    .header {
-        position: sticky;
-        height: 3em;
-        max-width: 100%;
-        min-width: 50em;
-        margin-top: 2.4em;
-        top: 0;
-        z-index: 2;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-        background: var(--header-gradient);
-    }
+  /* footer of website */
+  #footer {
+    padding: 2em;
+    line-height: 1.5;
+    background: #EEE;
+  }
 
-    /* container that holds project information */
-    .project_div {
-        display: block;
-        flex: 50%;
-        font-size: 28px;
-        height: 15em;
-        padding: 0;
-        border: 2px solid #555;
-        line-height: 1.5;
-        border-radius: 1em;
-        margin: 0.5em;
-        box-shadow: var(--drop-shadow);
-    }
+  /* website header */
+  .header {
+    position: sticky;
+    height: 3em;
+    max-width: 100%;
+    min-width: 50em;
+    top: 0;
+    z-index: 2;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+    background: var(--header-gradient);
+  }
 
-    /* adds box shadow when project div is hovered over */
-    .project_div:hover {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-        color: var(--prim-color);
-    }
+  /* sets header link image size */
+  .link_container:hover img { height: 2.7em }
 
-    /* defines div rows used on all pages */
-    .row {
-        display: flex;
-        max-width: 65em;
-        min-width: 50em;
-        margin: auto;
-        padding-top: 1em;
-    }
+  /* main body of website where most text lies */
+  #content {
+    position: relative;
+    z-index: 1;
+    max-width: 100%;
+    min-width: 50em;
+    margin: auto;
+    height: auto;
+    background: #FFFFFF;
+    padding-bottom: 2em;
+  }
 
-    /* container that contains conway canvas */
-    #canvas_container {
-        z-index: -1;
-        width: 100%;
-        height: 5em;
-    }
+  /* contains all header links */
+  nav {
+    display: flex;
+    width: 40em;
+    height: 100%;
+    margin: auto;
+  }
 
-    /* footer of website */
-    #footer {
-        padding: 2em;
-        line-height: 1.5;
-        background: #EEE;
-    }
+  /* container that holds project information */
+  .project_div {
+    display: block;
+    flex: 50%;
+    font-size: 28px;
+    height: 15em;
+    padding: 0;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: var(--drop-shadow);
+  }
 
-    /* contains all header links */
-    #link_container {
-        display: flex;
-        width: 40em;
-        height: 100%;
-        margin: auto;
-    }
+  /* adds box shadow when project div is hovered over */
+  .project_div:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    color: #0055ff;
+  }
 
-    /* main body of website where most text lies */
-    #main_body {
-        position: relative;
-        z-index: 1;
-        max-width: 100%;
-        min-width: 50em;
-        margin: auto;
-        height: auto;
-        background: #FFFFFF;
-        padding-bottom: 2em;
-    }
+  /* defines div rows used on all pages */
+  .row {
+    display: flex;
+    max-width: 65em;
+    min-width: 50em;
+    margin: auto;
+  }
 
-    /* hides logo that's meant only for mobile */
-    #mobile_logo {
-        display: none;
-    }
+  /* container that contains conway canvas */
+  #title_container {
+    z-index: -1;
+    width: 100%;
+    height: 12em;
+    background: linear-gradient(to right, #0090ffcc, #00e5ffcc), url('../img/icons/banner.jpeg') center;
+    background-size: cover;
+  }
 
-    /* title of website */
-    #title {
-        position: relative;
-        top: 0;
-        margin-top: 1.2em;
-        color: #FFFFFF;
-        font-size: 3em;
-        text-shadow: var(--drop-shadow);
-        z-index: 1;
-    }
+  /* title of website */
+  #title {
+    position: relative;
+    color: #FFFFFF;
+    font-size: 3em;
+    top: 50%;
+    transform: translateY(-50%);
+    text-shadow: var(--drop-shadow);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 }
