--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,78 +1,79 @@
-/* styling for mobile website */
+/*
+Paul Scott
+3 February 2019
+
+mobile styles
+ */
+
 @media (max-width: 720px) {
 
-    /* hide elements not needed for mobile version of website */
-    canvas, #canvas_container, #footer, #title {
-        display: none;
-    }
+  /* hide elements not needed for mobile version of website */
+  #footer, #title, #title_container { display: none }
 
-    /* div that holds about page information */
-    .content_div {
-        padding: 2em;
-        line-height: 1.5;
-        border-radius: 1em;
-        margin: 0.5em;
-        box-shadow: var(--drop-shadow);
-    }
+  /* div that holds about page information */
+  .data_div {
+    padding: 2em;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: var(--drop-shadow);
+  }
 
-    /* website header (acts like footer on mobile) */
-    .header {
-        position: fixed;
-        z-index: 2;
-        width: 100%;
-        bottom: 0;
-        height: 3em;
-        background: var(--header-gradient);
-        box-shadow: var(--drop-shadow);
-    }
+  /* website header (acts like footer on mobile) */
+  .header {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    bottom: 0;
+    height: 3em;
+    background: var(--header-gradient);
+    box-shadow: var(--drop-shadow);
+  }
 
-    /* container that holds project information */
-    .project_div {
-        display: block;
-        font-size: 24px;
-        height: 15em;
-        padding: 0;
-        border: 2px solid black;
-        line-height: 1.5;
-        border-radius: 1em;
-        margin: 0.5em;
-        box-shadow: var(--drop-shadow)
-    }
+  /* main body of website where most text lies */
+  #content {
+    z-index: 1;
+    width: 100%;
+    margin: 3em auto auto auto;
+    height: auto;
+    background: #FFFFFF;
+    padding-bottom: 3em;
+  }
 
-    /* new 'header' for mobile website */
-    #canvas_container {
-        position: fixed;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        vertical-align: middle;
-        top: 0;
-        width: 100%;
-        height: 3em;
-        background: white;
-        border-bottom: 1px solid grey;
-    }
+  /* logo for mobile site */
+  #mobile_logo { height: 2.5em }
 
-    /* contains all header links */
-    #link_container {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        margin: auto;
-    }
+  /* contains all header links */
+  nav {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  }
 
-    /* main body of website where most text lies */
-    #main_body {
-        z-index: 1;
-        width: 100%;
-        margin: 2em auto auto auto;
-        height: auto;
-        background: #FFFFFF;
-        padding-bottom: 3em;
-    }
+  /* container that holds project information */
+  .project_div {
+    display: block;
+    font-size: 24px;
+    height: 15em;
+    padding: 0;
+    line-height: 1.5;
+    border-radius: 1em;
+    margin: 0.5em;
+    box-shadow: var(--drop-shadow)
+  }
 
-    /* logo for mobile site */
-    #mobile_logo {
-        height: 2.5em;
-    }
+  /* new 'header' for mobile website */
+  #title_container {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    width: 100%;
+    height: 3em;
+    background: white;
+    border-bottom: 1px solid grey;
+  }
 }
