--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
   font-family: var(--font-stack);
   font-size: 18px;
   text-align: center;
-  background-color: #EEE;
+  background: #f5f5f5;
 }
 
 /* content div text */
