--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*
 Paul Scott
-3 February 2019
+11 February 2019
 
 desktop and mobile shared styles
  */
@@ -13,13 +13,33 @@ desktop and mobile shared styles
 
   /* variables */
   --font-stack: Montserrat, Arial, serif; /* font stack */
-  --header-gradient: linear-gradient(to right, #0055ff, #00d8ff); /* header gradient */
+
+  /* light theme */
+  /*--header-gradient: linear-gradient(to right, #0055ff, #00d8ff); !* header gradient *!
+  --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); !* drop shadow *!
+  --body-color: #f5f5f5;
+  --content-color: white;
+  --data-color: white;
+  --section-color: #555;
+  --text-color: black;
+  --mobile-header: white;
+  --mobile-border: 1px solid grey;*/
+
+  /* dark theme */
+  --header-gradient: linear-gradient(to right, #003cb5, #00839b); /* header gradient */
   --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); /* drop shadow */
+  --body-color: #2F2F2F;
+  --content-color: #333;
+  --data-color: #3A3A3A;
+  --section-color: #EEE;
+  --text-color: #EEE;
+  --mobile-header: #3A3A3A;
+  --mobile-border: 1px solid black;
 }
 
 /* configure links */
 a, a:visited, a:hover {
-  color: #555;
+  color: var(--section-color);
   text-decoration: none;
 }
 
@@ -30,13 +50,14 @@ body {
   font-family: var(--font-stack);
   font-size: 18px;
   text-align: center;
-  background: #f5f5f5;
+  background: var(--body-color);
 }
 
 /* content div text */
 .data_div p {
-  font-size: 24px;
+  font-size: 26px;
   text-align: center;
+  color: var(--text-color);
 }
 
 /* content div images */
@@ -65,7 +86,7 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
   margin: auto;
   padding: 0.2em;
-  background: white;
+  background: var(--content-color);
 }
 
 /* title for each section of website */
@@ -73,5 +94,5 @@ body {
   text-align: center;
   padding: 1.5em 0;
   font-size: 2em;
-  color: #555;
+  color: var(--section-color);
 }
