--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,52 +1,24 @@
 /*
 Paul Scott
-21 February 2019
+16 March 2019
 
 desktop styles
  */
 
 @media (min-width: 720px) {
 
-  /* hides logo that's meant only for mobile */
-  #mobile_logo {
-    display: none
+  /* contains all header links */
+  nav {
+    display: flex;
+    width: 40em;
+    height: 100%;
+    margin: auto;
   }
 
-  /* div that holds about page information */
-  .data_div {
-    flex: 33.33%;
-    float: left;
-    padding: 1.5em;
-    line-height: 1.5;
-    border-radius: 1em;
-    margin: 0.5em;
-    box-shadow: var(--drop-shadow);
-    background: var(--data-color);
-  }
-
-  /* footer of website */
-  #footer {
-    padding: 2em;
-    line-height: 1.5;
-    background: var(--body-color);
-    color: var(--text-color);
-  }
-
-  /* website header */
-  .header {
-    position: sticky;
-    height: 3em;
-    max-width: 100%;
-    min-width: 40em;
-    top: 0;
-    z-index: 2;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-    background: var(--header-gradient);
-  }
-
-  /* sets header link image size */
-  .link_container:hover img {
-    height: 2.7em
+  /* div that centers profile image and title */
+  #centered_title {
+    top: -25%;
+    transform: translateY(25%);
   }
 
   /* main body of website where most text lies */
@@ -61,25 +33,84 @@ desktop styles
     padding-bottom: 2em;
   }
 
-  /* contains all header links */
-  nav {
-    display: flex;
-    width: 40em;
-    height: 100%;
-    margin: auto;
+  /* footer of website */
+  #footer {
+    padding: 2em;
+    line-height: 1.5;
+    background: var(--footer-color);
+    color: var(--text-color);
+  }
+
+  /* profile picture */
+  #profile {
+    display: inline-block;
+    text-align: center;
+    width: 5em;
+    border-radius: 5em;
+  }
+
+  /* container that holds website title */
+  #title_container {
+    z-index: -1;
+    width: 100%;
+    height: 12em;
+    background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../img/icons/banner.jpg') center;
+    background-size: cover;
+  }
+
+  /* title of website */
+  #title {
+    position: relative;
+    color: white;
+    font-size: 2em;
+    text-shadow: var(--drop-shadow);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  /* div that holds about page information */
+  .data_div {
+    flex: 33.33%;
+    float: left;
+    padding: 1.5em;
+    line-height: 1.5;
+    border-radius: 2em;
+    margin: 0.5em;
+    box-shadow: var(--drop-shadow);
+    background: var(--data-color);
+  }
+
+  /* website header */
+  .header {
+    position: sticky;
+    height: 3em;
+    max-width: 100%;
+    min-width: 40em;
+    top: 0;
+    z-index: 2;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+    background: var(--header-gradient);
+    border-radius: 0 0 1em 1em;
+  }
+
+  /* sets header link image size */
+  .link_container:hover img {
+    height: 2.7em
   }
 
   /* container that holds project information */
   .project_div {
     display: block;
     flex: 50%;
-    font-size: 28px;
-    height: 15em;
+    height: 24em;
     padding: 0;
     line-height: 1.5;
-    border-radius: 1em;
+    border-radius: 2em;
     margin: 0.5em;
     box-shadow: var(--drop-shadow);
+    background: var(--data-color);
   }
 
   /* adds box shadow when project div is hovered over */
@@ -94,29 +125,5 @@ desktop styles
     max-width: 65em;
     min-width: 40em;
     margin: auto;
-  }
-
-  /* container that contains conway canvas */
-  #title_container {
-    z-index: -1;
-    width: 100%;
-    height: 12em;
-    /*background: linear-gradient(to right, #0090ffcc, #00e5ffcc), url('../img/icons/banner.jpg') center;*/
-    background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../img/icons/banner.jpg') center;
-    background-size: cover;
-  }
-
-  /* title of website */
-  #title {
-    position: relative;
-    color: white;
-    font-size: 3em;
-    top: 50%;
-    transform: translateY(-50%);
-    text-shadow: var(--drop-shadow);
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
   }
 }
