--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,22 +1,70 @@
 /*
 Paul Scott
-11 February 2019
+16 March 2019
 
 mobile styles
  */
 
 @media (max-width: 720px) {
 
+  /* contains all header links */
+  nav {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  }
+
+  /* main body of website where most text lies */
+  #content {
+    z-index: 1;
+    width: 100%;
+    margin: auto;
+    height: auto;
+    background: var(--content-color);
+    padding-bottom: 3em;
+  }
+
   /* hide elements not needed for mobile version of website */
-  #footer, #title, #title_container {
+  #footer {
     display: none
+  }
+
+  /* website title */
+  #title {
+    color: var(--text-color);
+    font-size: 28px;
+  }
+
+  /* profile picture */
+  #profile {
+    width: 6em;
+    border-radius: 6em;
+  }
+
+  /* container that holds website title */
+  #title_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    width: 100%;
+    height: 14em;
+    background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../img/icons/banner.jpg') center;
+    background-size: cover;
+  }
+
+  /* section titles */
+  .section_title {
+    padding: 1em 0;
   }
 
   /* div that holds about page information */
   .data_div {
     padding: 2em;
     line-height: 1.5;
-    border-radius: 1em;
+    border-radius: 2em;
     margin: 0.5em;
     box-shadow: var(--drop-shadow);
     background: var(--data-color);
@@ -31,54 +79,22 @@ mobile styles
     height: 3em;
     background: var(--header-gradient);
     box-shadow: var(--drop-shadow);
-  }
-
-  /* main body of website where most text lies */
-  #content {
-    z-index: 1;
-    width: 100%;
-    margin: 3em auto auto auto;
-    height: auto;
-    background: var(--content-color);
-    padding-bottom: 3em;
-  }
-
-  /* logo for mobile site */
-  #mobile_logo {
-    height: 2.5em
-  }
-
-  /* contains all header links */
-  nav {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    margin: auto;
+    border-radius: 1em 1em 0 0;
   }
 
   /* container that holds project information */
   .project_div {
     display: block;
-    font-size: 24px;
-    height: 15em;
+    height: 18em;
     padding: 0;
     line-height: 1.5;
-    border-radius: 1em;
+    border-radius: 2em;
     margin: 0.5em;
     box-shadow: var(--drop-shadow)
   }
 
-  /* new 'header' for mobile website */
-  #title_container {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    top: 0;
-    width: 100%;
-    height: 3em;
-    background: var(--mobile-header);
-    border-bottom: var(--mobile-border);
+  /* text for project div */
+  .project_div p {
+    font-size: 24px;
   }
 }
