--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*
 Paul Scott
-11 February 2019
+16 March 2019
 
 desktop and mobile shared styles
  */
@@ -13,33 +13,17 @@ desktop and mobile shared styles
 
   /* variables */
   --font-stack: Montserrat, Arial, serif; /* font stack */
-
-  /* light theme */
-  /*--header-gradient: linear-gradient(to right, #0055ff, #00d8ff); !* header gradient *!
-  --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); !* drop shadow *!
-  --body-color: #f5f5f5;
-  --content-color: white;
-  --data-color: white;
-  --section-color: #555;
-  --text-color: black;
-  --mobile-header: white;
-  --mobile-border: 1px solid grey;*/
-
-  /* dark theme */
   --header-gradient: linear-gradient(to right, #003cb5, #00839b); /* header gradient */
   --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); /* drop shadow */
-  --body-color: #2F2F2F;
   --content-color: #333;
   --data-color: #3A3A3A;
-  --section-color: #EEE;
+  --footer-color: #2F2F2F;
   --text-color: #EEE;
-  --mobile-header: #3A3A3A;
-  --mobile-border: 1px solid black;
 }
 
 /* configure links */
 a, a:visited, a:hover {
-  color: var(--section-color);
+  color: var(--text-color);
   text-decoration: none;
 }
 
@@ -50,7 +34,7 @@ body {
   font-family: var(--font-stack);
   font-size: 18px;
   text-align: center;
-  background: var(--body-color);
+  background: var(--content-color);
 }
 
 /* content div text */
@@ -86,7 +70,8 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
   margin: auto;
   padding: 0.2em;
-  background: var(--content-color);
+  font-size: 28px;
+  background: var(--data-color);
 }
 
 /* title for each section of website */
@@ -94,5 +79,5 @@ body {
   text-align: center;
   padding: 1.5em 0;
   font-size: 2em;
-  color: var(--section-color);
+  color: var(--text-color);
 }
